# google-workspace-automation-engine

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/architecture/: 00-system-overview.md  01-golden-path-sequence.md  02-run-model.md  03-workflow-plugin-architecture.md  04-logging-contract.md  05-auth.md  06-env-loading.md  07-client-factory.md  08-engine-execution-contract.md  09-sheets-schema-validation.md
docs/runbooks/: demo-e2e.md  gmail_to_sheets_intake.md  sheets-cleanup-reporting.md
runs/_evidence/: 01.04.02.P01.T2-config-local.txt  01.04.02.P01.T3-log-sample.jsonl  01.04.02.P01.T5-docs-proof.txt  01.04.02.P01.T5-gates.txt  01.04.02.P01.T6-proof.txt  01.04.02.P01.T7-check-proof.txt  01.04.02.P01.T8-proof.txt  01.04.02.P02.T0-plan.txt  01.04.02.P02.T1-proof.txt  01.04.02.P02.T2-proof.txt  01.04.02.P02.T3-proof.txt  01.04.02.P02.T4-proof.txt  01.04.02.P02.T5-proof.txt  01.04.02.P02.T6-proof.txt  01.04.02.P02.T7-tests-proof.txt  01.04.02.P02.T8-check-proof.txt  (+11 more)
scripts/: dump_gmail_fixtures.py
tests/: integration_helpers.py  test_artifacts_index.py  test_cli_smoke.py  test_clients_factory.py  test_clients_retry.py  test_config.py  test_engine_core.py  test_engine_core_t6.py  test_engine_failure.py  test_gmail_actions.py  test_gmail_decode.py  test_gmail_integration.py  test_logging.py  test_run_audit_export.py  test_sheets_integration.py  test_sheets_transforms.py  test_sheets_transforms_unit.py  test_sheets_triage_upsert_unit.py  test_sheets_validation.py  test_sheets_validation_unit.py
(+55 files in other folders)
