[project]
name = "gw-engine"
version = "0.1.0"
description = "Google Workspace Automation Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.188.0",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.4",
]

[project.scripts]
gw = "gw_engine.cli:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -m 'not integration'"
markers = [
    "integration: marks integration tests (excluded by default)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["gw_engine"]
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "types-pyyaml>=6.0.12.20250915",
]
